OMP Sender med søknadsperioder til kalkulus